
import {Time} from "./Time";
export class Rest extends Time {

	representation(): string {
		return "##";
	}

}